I made box-shadow for header and changed the color (as in figma), fixed bugs that interfered with the work of the site, finalized the main page, and more precisely made the buttons in the center, because there were problems because of bugs on the site, and a couple of other little things. Made the font for the whole site Inter Regular, made @media - site for phone, now the site for tablets and phones. Aligned the menu for media and made a clickable icon where the buttons are. Compressed the background (it is necessary for that, if the user comes from the phone, it was faster to load the background of the site.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 html {
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
-    background-image: url("../images/background.jpg");
+    background-image: url("../images/background.webp");
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -14,18 +14,17 @@ html {
 
 /* Верхняя панель */
 header {
-    display: flex;
-    justify-content: flex-start;
-    gap: 8px;
     align-items: center;
     padding: 5px 20px;
-    font-size: 18px;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(28, 28, 28, 1);
+    box-shadow: 1px 2px 4px rgb(0 0 0 / 45%);
 }
 
 /* Стиль для названия RANKED.CC */
 header .logo-info {
     display: flex;
+    position: absolute;
+    top: 15px;
     align-items: center;
     gap: 22px;
     font-size: 26px;
@@ -59,7 +58,6 @@ header .logo-info .logo-text > div:nth-child(2) {
 }
 
 header menu ul {
-    margin: 0;
     align-items: center;
 }
 header menu ul li a {
@@ -88,18 +86,55 @@ header .gradient-btn:hover {
     background: rgb(120, 0, 181);
     background: linear-gradient(142deg, rgb(120, 0, 149) 21%, rgb(220, 88, 88) 70%, rgb(211, 141, 42) 100%);
 }
-.nav-buttons ul {
+header .nav-buttons {
+    display: flex;
+    justify-content: center; /* Центрируем кнопки */
+    padding: 0;
+}
+header .nav-buttons.mobile {
+    display: flex;
+    position: absolute;
+    top: 32px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    background-color: black;
+}
+header .nav-buttons.mobile ul {
+    flex-direction: column;
+    gap: 10px;
+}
+
+header .nav-buttons ul {
     display: flex;
     list-style: none;
     padding: 0;
-    text-align: center;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
+    margin: 0;
 }
 
-.nav-buttons li {
+header .nav-buttons li {
     margin: 0;
+}
+header .nav-buttons ul li a {
+    position: relative;
+    text-decoration: none;
+    font-weight: bold;
+    transition: 0.3s;
+    border-radius: 30px;
+}
+header .server-ip {
+    color: white;
+    font-size: 26px;
+    font-weight: bold;
+    margin-left: auto;
+}
+header .burger-menu {
+    display: none;
+    position: absolute;
+    right: 19px;
+    top: 9px;
+    font-size: 24px;
 }
 
 .colorful-button1 {
@@ -144,12 +179,7 @@ header .gradient-btn:hover {
     background-position: 100% 50%;
 }
 
-header .server-ip {
-    color: white;
-    font-size: 26px;
-    font-weight: bold;
-    margin-left: auto;
-}
+
 
 /* Основной блок */
 main {
